# drawing_manipulator

./: .gitignore  readme.md
Voice recognition and wake up/: Installation and usage of sonwboy
Voice recognition and wake up/robot_voice/: CMakeLists.txt  package.xml
Voice recognition and wake up/robot_voice/launch/: voice_control.launch  voice_control_tb3.launch
Voice recognition and wake up/robot_voice/src/: iat_publish.cpp  sub_word.cpp  sub_word_tb3.cpp
Voice recognition and wake up/snowboy/examples/Python/: demo.py  snowboydecoder.py
aubo_robot/aubo_kinematics/: CMakeLists.txt
aubo_robot/aubo_planner/: CMakeLists.txt
draw_core/: readme.md
draw_core/scripts/: arm_controller.py  control.py  dirty_controller.py  display.py  drawing.py  edgesToPath.py  facial_recognition.py  gcode_draw.py  gcode_excute.py  img_process.py  manipulation.py  perception.py  svg_convert.py  trajectory.py
draw_core/scripts/svg2gcode/: config.py  svg2gcode.py
